--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "redux": "^3.5.2",
     "react-bootstrap": "^0.30.2",
     "react-burger-menu": "^1.10.2",
+    "react-headroom": "^2.1.1",
     "react-tab-panel": "^2.2.2",
     "react-router": "^2.6.1",
-    "react-router-redux": "^4.0.5"    
+    "react-router-redux": "^4.0.5"
   }
 }
