moved header down and added redux-thunk

--- a/package.json
+++ b/package.json
@@ -67,14 +67,15 @@
     "core-js": "^2.0.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
     "react-bootstrap": "^0.30.2",
     "react-burger-menu": "^1.10.2",
+    "react-dom": "^15.0.0",
     "react-headroom": "^2.1.1",
-    "react-tab-panel": "^2.2.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
-    "react-router-redux": "^4.0.5"
+    "react-router-redux": "^4.0.5",
+    "react-tab-panel": "^2.2.2",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
