--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "node-sass": "^3.4.2"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "core-js": "^2.0.0",
     "es6-promise": "^3.2.1",
     "isomorphic-fetch": "^2.2.1",
